--- a/webapp/view/App.view.xml
+++ b/webapp/view/App.view.xml
@@ -2,5 +2,11 @@
     controllerName="sap.ui.demo.walkthrough.controller.App"
     xmlns="sap.m"
     xmlns:mvc="sap.ui.core.mvc">
+    
     <Button text="Say hi!" press=".onShowHello"/>
+    <Input 
+        value="{/recipient/name}" 
+        description="Show {/recipient/name}" 
+        valueLiveUpdate="true"
+        width="60%" />
 </mvc:View>
