--- a/webapp/view/App.view.xml
+++ b/webapp/view/App.view.xml
@@ -1,26 +1,30 @@
-<mvc:View
-    controllerName="sap.ui.demo.walkthrough.controller.App"
+<mvc:View controllerName="sap.ui.demo.walkthrough.controller.App"
     xmlns="sap.m"
-    xmlns:mvc="sap.ui.core.mvc"
-    displayBlock="true">
-
-    <App>
-        <pages>
-            <Page title="{i18n>homePageTitle}">
-                <content>
-                    <Panel headerText="{i18n>helloPanelTitle}">
+    xmlns:mvc="sap.ui.core.mvc" displayBlock="true">
+    <Shell>
+        <App>
+            <pages>
+                <Page title="{i18n>homePageTitle}">
                     <content>
-                        <Button text="{i18n>showHelloButtonText}" press=".onShowHello"/>
-                        <Input 
-                            value="{/recipient/name}" 
-                            description="Show {/recipient/name}" 
-                            valueLiveUpdate="true"
-                            width="60%" />
+                        <Panel headerText="{i18n>helloPanelTitle}"
+                            class="sapUiResponsiveMargin"
+                            width="auto">
+                            <content>
+                                <Button text="{i18n>showHelloButtonText}" 
+                                        press=".onShowHello"
+                                        class="sapUiSmallMarginEnd"/>
+                                <Input value="{/recipient/name}" 
+                                        description="Show {/recipient/name}" 
+                                        valueLiveUpdate="true" 
+                                        width="60%" 
+                                        />
+                                <Text text="Hello {/recipient/name}"
+                                        class="sapUiSmallMargin" />
+                            </content>
+                        </Panel>
                     </content>
-                    </Panel>
-                </content>
-            </Page>
-        </pages>
-    </App>
-    
+                </Page>
+            </pages>
+        </App>
+    </Shell>
 </mvc:View>
