--- a/webapp/view/HelloDialog.fragment.xml
+++ b/webapp/view/HelloDialog.fragment.xml
@@ -3,5 +3,9 @@
     xmlns:core="sap.ui.core">
     <Dialog
         id="helloDialog"
-        title="Hello {/recipient/name}" />
+        title="Hello {/recipient/name}">
+        <beginButton>
+            <Button text="{i18n>closeDialogButtonText}" press=".onCloseDialog"/>
+        </beginButton>
+</Dialog>
 </core:FragmentDefinition>
